# repeatlint

./: .gitignore  Cargo.toml
src/: main.rs
src-tauri/: Cargo.toml  config.toml  tauri.conf.json
src-tauri/src/: lint.rs  main.rs
ui/: index.html
