[package]
name = "repeatlint"
version = "0.2.0"
description = "Repeatlint"
authors = ["iori-komatsu"]
license = ""
repository = ""
default-run = "repeatlint"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = ["dialog-all"] }

anyhow = "1"
html-escape = "0.2.13"
toml = "0.8.13"
vibrato = "0.5.1"
zstd = "0.13.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
